--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,13 @@
 nav{
     background-color: darkblue;
-    padding: 10px;
+    padding: 30px;
 }
 
 
 
 nav a {
     background-color: white;
-    display: block;
+    /*display: block;*/
     padding: 20px;
 
 }
