--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,21 +1,34 @@
 .callout {
 
-	max-width: 600px;
+	max-width: 400px;
     margin: 10px auto;
     padding: 15px;
-    border: 2px solid rgba(0, 0, 0, 0.1)
-    background-color; #247
-    color: #fff;
-}
+    border: 2px solid darkblue;
+    background-color: rgb(23, 97, 207);
+    color:aliceblue;
+    
+    
+    }
 
 .callout img {
-	
+    float:right;
+    margin: 0 0 10px 15px;
+    border: 1px solid black;
+    padding: 3px;
+    background-color: #bbb;
+    width: 100px;
+    height: auto;
+
 }
 
 blockquote {
-	
+	margin: 0;
+
 }
 
 cite {
-	
+	display: block;
+    border-top: 1px dotted #fff;
+    text-align: right;
+    font-size: smaller;
 }
